# Embedded-Msn

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
arch/aarch64/: meson.build
arch/arm/: meson.build
arch/x86/: meson.build
arch/x86_64/: meson.build
libc_starting_point/libc-skeleton/: meson.build
libc_starting_point/libc-skeleton/src/: meson.build
src/: meson.build
src/app/: meson.build
src/gdtoa/include/: arith.h
src/utility/: meson.build
subprojects/: etl.wrap  openlibm.wrap  printf.wrap
test/: meson.build
test/tools/: clear_test_xml.sh  exec_program_with_env.sh  libc_tests_xml.sh
tools/: CI.jenkinsfile  Jenkinsfile  clang-tidy.sh  cppcheck.sh  format-patch.sh  format.sh  libc_tests_xml.sh  package.sh
