option('disable-builtins', type: 'boolean', value: false, yield: true)
option('disable-stack-protection', type: 'boolean', value: true, yield: true)
option('disable-rtti', type : 'boolean', value: true, yield: true)
option('disable-exceptions', type : 'boolean', value: true, yield: true)
option('enable-pedantic', type: 'boolean', value: false, yield: true)
option('enable-pedantic-error', type: 'boolean', value: false, yield: true)
